<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/exo_control_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CC000000"
    android:layoutDirection="ltr"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:background="@color/colorFooterPrimary"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_prev"
            style="@style/ExoMediaButton.Previous"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/exo_prev" />

        <ImageButton
            android:id="@id/exo_play"
            style="@style/ExoMediaButton.Play"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/exo_play" />

        <ImageButton
            android:id="@id/exo_pause"
            style="@style/ExoMediaButton.Pause"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/exo_pause" />

        <TextView
            android:id="@+id/exo_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:includeFontPadding="false"
            android:padding="8dp"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <com.google.android.exoplayer2.ui.DefaultTimeBar
            android:id="@+id/exo_progress"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            app:buffered_color="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/exo_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:includeFontPadding="false"
            android:padding="8dp"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/button_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_cloud_download_white_24dp" />

        <com.dinuscxj.progressbar.CircleProgressBar
            android:id="@+id/progress_download"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:visibility="gone"
            app:progress_end_color="?attr/colorPrimary"
            app:progress_text_color="@color/white" />

        <ImageButton
            android:id="@+id/button_next"
            style="@style/ExoMediaButton.Next"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/exo_next" />
    </LinearLayout>

</FrameLayout>