<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorHeaderPrimary"
    tools:context="com.neosolusi.expresslingua.features.register.RegisterActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="-7dp"
            android:indeterminate="true"
            android:max="100"
            android:paddingEnd="-16dp"
            android:paddingStart="-16dp"
            android:scaleY="4"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layout_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/icon_header"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:contentDescription="@string/app_name"
                android:paddingTop="10dp"
                android:src="@drawable/header_img" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:includeFontPadding="false"
                android:text="@string/home_page"
                android:textColor="@color/gray_black"
                android:textSize="24sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/edit_register_userid"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="32dp"
            android:background="@drawable/shape_round_outline"
            android:drawableStart="@drawable/ic_icon_user"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/register_hint_userid"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:padding="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textCursorDrawable="@null"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_header"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/edit_register_email"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_round_outline"
            android:drawableStart="@drawable/ic_icon_mail"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/register_hint_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textCursorDrawable="@null"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_register_userid"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/edit_register_password"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_round_outline"
            android:drawableStart="@drawable/ic_icon_lock"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/register_hint_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textCursorDrawable="@null"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_register_email" />

        <EditText
            android:id="@+id/edit_register_phone"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_round_outline"
            android:drawableStart="@drawable/ic_icon_phone"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/register_hint_phone"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textCursorDrawable="@null"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_register_password" />

        <EditText
            android:id="@+id/edit_register_address"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:gravity="top"
            android:hint="@string/register_hint_Address"
            android:padding="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textCursorDrawable="@null"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_register_phone"
            tools:layout_editor_absoluteX="40dp" />

        <Spinner
            android:id="@+id/spinner_register_city"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_register_address" />

        <Spinner
            android:id="@+id/spinner_register_province"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_register_city" />

        <EditText
            android:id="@+id/edit_register_country"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:hint="@string/register_hint_country"
            android:inputType="textCapSentences"
            android:padding="8dp"
            android:text="Indonesia"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textCursorDrawable="@null"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_register_province" />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_button"
            android:text="@string/register_button_submit"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_register_country" />

        <TextView
            android:id="@+id/text_register_back_to_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:text="Bila sudah punya akun,\nklik disini untuk login"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#3a678c"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_submit" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
